# bert_extractor

./: .pre-commit-config.yaml  Dockerfile  README.md  noxfile.py  pylintrc  pyproject.toml  quickstart.ipynb  requirements.txt
.github/workflows/: ci.yml
bert_extractor/: __init__.py  base.py  configs.py  constants.py  main.py  ner.py  reviews.py  utils.py
bert_extractor/extractors/: __init__.py  base.py  csv.py  ner.py  reviews.py
config/: config_sample.json  config_sample_csv.json  config_sample_ner.json  config_sample_reviews.json
tests/: test_extraction.py
tests/extractors/: sample_data.py  test_base_extractor.py  test_ner_extractor.py  test_review_extractor.py
