[tool.poetry]
name = "bert_extractor"
version = "0.1.0"
description = "Data extraction and preprocessing for bert classifier"
authors = ["fawolfmann <fawolfmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.7.0"
scikit-learn = "^0.24"
kaggle = {git = "https://github.com/fawolfmann/kaggle-api"}

[tool.poetry.dev-dependencies]
pre-commit = "2.2.0"
isort = "5.8.0"
flake8 = "3.7.8"
pytest = "6.2.3"
pytest-cov = "2.11.1"
pytest-xdist = "2.2.1"
pylint = "2.7.4"
pdbpp = "0.10.2"
black = "19.10b0"
nox = "2020.12.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true